<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="15dp"
    android:paddingTop="5dp"
    android:background="@drawable/card_background_white"
    >



    <TextView
        android:id="@+id/txt_dsrReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/individual_dsr"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textColor="@android:color/white"
        android:background="@drawable/card_background_report_selector"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_territory"
        android:paddingLeft="5dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:textColor="@android:color/black"
        android:background="@drawable/card_background_header"/>
    <TextView
        android:id="@+id/txt_WholeReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_territory"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/card_background_report_selector"/>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"

    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_dlyRprt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily"
            android:layout_marginTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:background="@drawable/card_background_header"/>
        <TextView
            android:id="@+id/txt_DlSkuWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/txtSKUWise"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
        <TextView
            android:id="@+id/txt_DL_StoreWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtStoreWise"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
        <TextView
            android:id="@+id/txt_DL_StoreSKUWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtStoreSKUWise"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_MTDRprt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MTD"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginTop="2dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:background="@drawable/card_background_header"/>
        <TextView
            android:id="@+id/txt_MTSkuWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSKUWise"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:textSize="16sp"
            android:paddingBottom="3dp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
        <TextView
            android:id="@+id/txt_MT_StoreWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtStoreWise"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
        <TextView
            android:id="@+id/txt_MT_StoreSKUWise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtStoreSKUWise"
            android:layout_marginTop="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/card_background_report_selector"/>
    </LinearLayout>
</LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCancle"
        android:textSize="14sp"
        android:id="@+id/btn_cancel"
        android:layout_marginLeft="5dp"
        android:background="@drawable/btn_background"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"/>
</LinearLayout>